--- a/raffles.html
+++ b/raffles.html
@@ -8,12 +8,14 @@
 <style>
 :root{--bg:#0a0d12;--bg2:#0e1117;--panel:#0d1117;--card:#111722;--card2:#0f1520;--stroke:rgba(255,255,255,.06);--stroke2:rgba(100,160,255,.25);--blue:#3b82f6;--blue2:#1d4ed8;--text:#e6edf3;--muted:#98a2b3;--shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);}
 html[data-theme="light"]{--bg:#f4f7fb;--bg2:#eef2f7;--panel:#fff;--card:#fff;--card2:#f6f8fb;--stroke:rgba(10,20,40,.08);--stroke2:rgba(59,130,246,.35);--blue:#2563eb;--blue2:#1d4ed8;--text:#0b1220;--muted:#52607a;--shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);}
-*{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);
+html,body{height:100%;overflow:hidden;overscroll-behavior:none;-webkit-overflow-scrolling:auto;touch-action:manipulation;}
+*{box-sizing:border-box}
+body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);
 background:radial-gradient(1000px 600px at 10% -10%,rgba(59,130,246,.28),transparent 60%),
 radial-gradient(800px 500px at 110% 0%,rgba(29,78,216,.22),transparent 55%),
 linear-gradient(180deg,var(--bg2) 0%,var(--bg) 100%);min-height:100vh;display:flex;justify-content:center;padding:16px;}
 .app{width:min(1000px,100%);border:1px solid var(--stroke);border-radius:20px;box-shadow:var(--shadow);padding:14px;
-background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));}
+background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));height:100%;overflow-y:auto;overscroll-behavior:none;}
 header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
 .title{display:flex;flex-direction:column;gap:2px;align-items:center;flex:1;}
 .title h1{margin:0;font-size:20px;font-weight:800;} .title span{font-size:12px;color:var(--muted);}
@@ -31,6 +33,7 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 .cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
 @media (max-width:720px){.grid{grid-template-columns:1fr;}}
 @keyframes spin{from{transform:rotate(0deg);}to{transform:rotate(360deg);}}
+.container,.content{height:100%;overflow-y:auto;overscroll-behavior:none;}
 </style>
 </head>
 <body>
@@ -62,7 +65,13 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 <script>
 function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
 return (0.299*r+0.587*g+0.114*b)/255<0.5;}
-function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready(); tg.expand();
+function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready();
+
+if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
+try{ tg.disableVerticalSwipes(); }catch(e){}
+document.documentElement.style.overscrollBehavior="none";
+document.body.style.overscrollBehavior="none";
+
 const p=tg.themeParams||{}; if(p.bg_color) document.documentElement.style.setProperty("--bg",p.bg_color); if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel",p.secondary_bg_color);
 if(p.text_color) document.documentElement.style.setProperty("--text",p.text_color); if(p.hint_color) document.documentElement.style.setProperty("--muted",p.hint_color);
 if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
