--- a/rating.html
+++ b/rating.html
@@ -25,8 +25,7 @@
       --blue:#2563eb; --blue2:#1d4ed8;
       --text:#0b1220; --muted:#52607a;
       --shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);
-    }
-    *{box-sizing:border-box}
+    } html,body{height:100%;overflow:hidden;overscroll-behavior:none;-webkit-overflow-scrolling:auto;touch-action:manipulation;} *{box-sizing:border-box}
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
@@ -43,6 +42,7 @@
       border-radius:20px; box-shadow:var(--shadow);
       padding:14px;
       background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
+      height:100%; overflow-y:auto; overscroll-behavior:none;
     }
     header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
     .title{display:flex;flex-direction:column;gap:2px;align-items:center;flex:1;}
@@ -108,7 +108,7 @@
     .empty{
       text-align:center; color:var(--muted); padding:20px 0; font-weight:800;
     }
-  </style>
+  .container,.content{height:100%;overflow-y:auto;overscroll-behavior:none;}</style>
 </head>
 <body>
   <div class="app">
@@ -172,7 +172,11 @@
   function initTelegram(){
     const tg=window.Telegram && window.Telegram.WebApp;
     if(!tg) return null;
-    tg.ready(); tg.expand();
+    tg.ready();
+    if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
+    try{ tg.disableVerticalSwipes(); }catch(e){}
+    document.documentElement.style.overscrollBehavior="none";
+    document.body.style.overscrollBehavior="none";
     const p=tg.themeParams||{};
     if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
     if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
