--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 <body>
 <div class="app">
 <header>
-<a class="back" href="/">← Назад</a>
+<div style="width:64px"></div>
 <div class="title">
 <h1>FirstClub</h1>
 <span>Выбери раздел</span>
