--- a/dice.html
+++ b/dice.html
@@ -209,7 +209,7 @@
   }
 
   // ===== API =====
-  const API_BASE = "https://api.firstgamble.ru";
+const API_BASE = "";
 
   async function loadBalance(){
     const userId = getTgUserId();
