--- a/rating.html
+++ b/rating.html
@@ -195,7 +195,7 @@
   function getUidFromUrl(){ try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; } }
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 
-  const API_BASE="https://api.firstgamble.ru";
+    const API_BASE="";
 
   const rowsEl=document.getElementById("rows");
   const emptyEl=document.getElementById("empty");
