--- a/rpg.html
+++ b/rpg.html
@@ -166,7 +166,8 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
 </div>
 
 <script>
-const API_BASE = "https://api.firstgamble.ru";
+const API_BASE = "";
+
 const RES_MAX = 999;
 
 const RES_META = [
