--- a/bj.html
+++ b/bj.html
@@ -224,7 +224,8 @@
     try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); }
   }
 
-  const API_BASE="https://api.firstgamble.ru";
+const API_BASE="";
+
   async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
