--- a/shop.html
+++ b/shop.html
@@ -123,7 +123,7 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
 
 <script>
 
-const API_BASE = "https://api.firstgamble.ru";
+const API_BASE = "";
 let uid = null;
 let tg = null;
 
