--- a/slot.html
+++ b/slot.html
@@ -192,7 +192,8 @@
   function getUidFromUrl(){ try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; } }
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 
-  const API_BASE="https://api.firstgamble.ru";
+const API_BASE="";
+
   async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
