--- a/slot.html
+++ b/slot.html
@@ -192,15 +192,16 @@
   function getUidFromUrl(){ try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; } }
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 
-const API_BASE="";
-
-  async function loadBalance(){
+  const API_BASE="https://api.firstgamble.ru";
+  
+let tgInitData = "";
+async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
     if(!el) return;
     if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
     try{
-      const r=await fetch(API_BASE+"/api/balance?user_id="+uid);
+      const r=await fetch(API_BASE+"/api/balance?user_id="+uid, {headers: tgInitData ? {"X-Telegram-InitData": tgInitData} : {}});
       const d=await r.json();
       el.textContent=d.balance??0;
       localStorage.setItem("balance_local", el.textContent);
@@ -211,7 +212,7 @@ const API_BASE="";
   async function sendPoint(uid, game){
     try{
       const body=JSON.stringify({user_id:String(uid), game:String(game)||"slot"});
-      const r=await fetch(API_BASE+"/api/add_point", {method:"POST", headers:{"Content-Type":"application/json"}, body});
+      const r=await fetch(API_BASE+"/api/add_point", {method:"POST", headers: (()=>{const h={"Content-Type":"application/json"}; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h;})(), body});
       const text=await r.text();
       try{ return JSON.parse(text); }catch{ return {ok:false, error:"json_parse_fail", raw:text}; }
     }catch(err){ return {ok:false, error:String(err)}; }
