--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt
 return (0.299*r+0.587*g+0.114*b)/255<0.5;}
 function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready();
 
+
+    tgInitData = tg.initData || "";
 if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
 try{ tg.disableVerticalSwipes(); }catch(e){}
 document.documentElement.style.overscrollBehavior="none";
@@ -118,9 +120,10 @@ function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUr
 const API_BASE="https://api.firstgamble.ru";
 
 let tgInitData = "";
+
 async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
 if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
-try{ const r=await fetch(API_BASE+"/api/balance?user_id="+uid, {headers: tgInitData ? {"X-Telegram-InitData": tgInitData} : {}}); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
+try{ const r=await fetch(API_BASE + "/api/balance?user_id=" + uid, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) }); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
 catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
 }
 loadBalance();
