--- a/rating.html
+++ b/rating.html
@@ -173,7 +173,11 @@
     const tg=window.Telegram && window.Telegram.WebApp;
     if(!tg) return null;
     tg.ready();
-    if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
+    
+    
+    tgInitData = tg.initData || "";
+tgInitData = tg.initData || "";
+if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
     try{ tg.disableVerticalSwipes(); }catch(e){}
     document.documentElement.style.overscrollBehavior="none";
     document.body.style.overscrollBehavior="none";
@@ -197,9 +201,10 @@
 
   const API_BASE="https://api.firstgamble.ru";
 
-  
 let tgInitData = "";
-const rowsEl=document.getElementById("rows");
+
+
+  const rowsEl=document.getElementById("rows");
   const emptyEl=document.getElementById("empty");
   const gameSel=document.getElementById("gameSel");
   const sortSel=document.getElementById("sortSel");
@@ -239,7 +244,7 @@ const rowsEl=document.getElementById("rows");
     emptyEl.style.display="none";
 
     try{
-      const res = await fetch(`${API_BASE}/api/leaderboard?game=${game}&sort=${sort}&limit=100`, {headers: tgInitData ? {"X-Telegram-InitData": tgInitData} : {}});
+      const res = await fetch(`${API_BASE}/api/leaderboard?game=${game}&sort=${sort}&limit=100`, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) });
       const data = await res.json();
       if(!data.ok || !data.rows || data.rows.length===0){
         emptyEl.style.display="block";
