--- a/slot.html
+++ b/slot.html
@@ -170,7 +170,9 @@
     if(!tg) return null;
     tg.ready();
 
-    if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
+    
+    tgInitData = tg.initData || "";
+if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
     try{ tg.disableVerticalSwipes(); }catch(e){}
     document.documentElement.style.overscrollBehavior="none";
     document.body.style.overscrollBehavior="none";
@@ -193,15 +195,16 @@
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 
   const API_BASE="https://api.firstgamble.ru";
-  
+
 let tgInitData = "";
-async function loadBalance(){
+
+  async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
     if(!el) return;
     if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
     try{
-      const r=await fetch(API_BASE+"/api/balance?user_id="+uid, {headers: tgInitData ? {"X-Telegram-InitData": tgInitData} : {}});
+      const r=await fetch(API_BASE + "/api/balance?user_id=" + uid, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) });
       const d=await r.json();
       el.textContent=d.balance??0;
       localStorage.setItem("balance_local", el.textContent);
@@ -212,7 +215,7 @@ async function loadBalance(){
   async function sendPoint(uid, game){
     try{
       const body=JSON.stringify({user_id:String(uid), game:String(game)||"slot"});
-      const r=await fetch(API_BASE+"/api/add_point", {method:"POST", headers: (()=>{const h={"Content-Type":"application/json"}; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h;})(), body});
+      const r=await fetch(API_BASE+"/api/add_point", {method:"POST", headers: (()=>{ const h={ "Content-Type":"application/json" }; if(tgInitData) h["X-Telegram-InitData"]=tgInitData; return h; })(), body});
       const text=await r.text();
       try{ return JSON.parse(text); }catch{ return {ok:false, error:"json_parse_fail", raw:text}; }
     }catch(err){ return {ok:false, error:String(err)}; }
