--- a/dice.html
+++ b/dice.html
@@ -171,6 +171,8 @@
 
 <script>
   // ===== Telegram + Theme + UID fallback =====
+  let tgInitData = "";
+
   function isColorDark(hex){
     if(!hex || hex[0] !== "#") return false;
     const r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
@@ -213,22 +215,18 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
   // ===== API =====
   const API_BASE = "https://api.firstgamble.ru";
 
-let tgInitData = "";
-
 
   async function loadBalance(){
     const userId = getTgUserId();
     const el = document.getElementById("balanceValue");
     if(!el) return;
 
-    if(!userId){
-      el.textContent = localStorage.getItem("balance_local") || "0";
-      return;
-    }
     try{
       const headers = {};
       if (tgInitData) headers["X-Telegram-InitData"] = tgInitData;
-      const res = await fetch(API_BASE + "/api/balance?user_id=" + userId, { headers });
+      let url = API_BASE + "/api/balance";
+      if(userId) url += "?user_id=" + userId;
+      const res = await fetch(url, { headers });
       const data = await res.json();
       el.textContent = data.balance ?? 0;
       localStorage.setItem("balance_local", el.textContent);
@@ -316,10 +314,8 @@ if(!uid){
   tgWarn.textContent =
     "⚠️ TG id не пришёл. Открой миниаппку через кнопку бота.\n" +
     "Если тестируешь в браузере — добавь ?uid=123 в адресную строку.";
-  rollBtn.disabled = true;
 } else {
   tgWarn.textContent = "TG id: " + uid;
-  rollBtn.disabled = false;
 }
 
 loadBalance();
