--- a/prices.html
+++ b/prices.html
@@ -45,6 +45,8 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 </div>
 
 <script>
+let tgInitData = "";
+
 function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
 return (0.299*r+0.587*g+0.114*b)/255<0.5;}
 function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready();
@@ -65,11 +67,8 @@ function getUidFromUrl(){ try{const u=new URL(location.href); return u.searchPar
 function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 const API_BASE="https://api.firstgamble.ru";
 
-let tgInitData = "";
-
 async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
-if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
-try{ const r=await fetch(API_BASE + "/api/balance?user_id=" + uid, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) }); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
+try{ const headers=tgInitData?{"X-Telegram-InitData":tgInitData}:{}; let url=API_BASE+"/api/balance"; if(uid) url += "?user_id="+uid; const r=await fetch(url, { headers }); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
 catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
 }
 loadBalance();
