--- a/raffles.html
+++ b/raffles.html
@@ -63,10 +63,13 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 </div>
 
 <script>
+let tgInitData = "";
+
 function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
 return (0.299*r+0.587*g+0.114*b)/255<0.5;}
 function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready();
 
+tgInitData = tg.initData || "";
 if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true; }
 try{ tg.disableVerticalSwipes(); }catch(e){}
 document.documentElement.style.overscrollBehavior="none";
@@ -79,11 +82,10 @@ tg.setHeaderColor(p.bg_color||"#0a0d12"); tg.setBackgroundColor(p.bg_color||"#0a
 const tg=initTelegram(); if(!tg){ const prefersLight=window.matchMedia&&window.matchMedia("(prefers-color-scheme: light)").matches; document.documentElement.setAttribute("data-theme", prefersLight?"light":"dark"); }
 function getUidFromUrl(){ try{const u=new URL(location.href); return u.searchParams.get("uid");}catch(e){return null;} }
 function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
-const API_BASE="";
+const API_BASE="https://api.firstgamble.ru";
 
 async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
-if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
-try{ const r=await fetch(API_BASE+"/api/balance?user_id="+uid); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
+try{ const headers = tgInitData?{"X-Telegram-InitData":tgInitData}:{}; let url = API_BASE+"/api/balance"; if(uid) url += "?user_id="+uid; const r=await fetch(url, { headers }); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
 catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
 }
 loadBalance();
