--- a/slot.html
+++ b/slot.html
@@ -160,6 +160,8 @@
 
 <script>
   // ===== Telegram / theme / uid fallback =====
+  let tgInitData = "";
+
   function isColorDark(hex){
     if(!hex || hex[0] !== "#") return false;
     const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
@@ -194,17 +196,17 @@ if(!window.__tgExpanded){ try{ tg.expand(); }catch(e){} window.__tgExpanded=true
   function getUidFromUrl(){ try{ return new URL(location.href).searchParams.get("uid"); }catch(e){ return null; } }
   function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
 
-  const API_BASE="https://api.firstgamble.ru";
-
-let tgInitData = "";
+const API_BASE="https://api.firstgamble.ru";
 
   async function loadBalance(){
     const uid=getTgUserId();
     const el=document.getElementById("balanceValue");
     if(!el) return;
-    if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
     try{
-      const r=await fetch(API_BASE + "/api/balance?user_id=" + uid, { headers: (tgInitData?{"X-Telegram-InitData":tgInitData}:{}) });
+      const headers = tgInitData?{"X-Telegram-InitData":tgInitData}:{};
+      let url = API_BASE + "/api/balance";
+      if(uid) url += "?user_id=" + uid;
+      const r=await fetch(url, { headers });
       const d=await r.json();
       el.textContent=d.balance??0;
       localStorage.setItem("balance_local", el.textContent);
